# how_to_use_harness

./: .eslintrc.cjs  .gitignore  LICENSE  agents.md  feature-list.json  feature-list.schema.json  index.html  init.sh  package-lock.json  package.json  progress.md  session-handoff.md  tailwind.config.js  tsconfig.json  tsconfig.node.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  github_api.rs  lib.rs  main.rs  models.rs
src/components/: ActivityFeed.tsx  AddFollow.tsx  FollowList.tsx  IdeaIcon.tsx  RepoCard.tsx  RepoList.tsx  Sidebar.tsx
src/hooks/: useActivities.ts  useAvailableIdes.ts  useFollow.ts  useRepos.ts  useSearch.ts
src/services/: github.ts
src/types/: github.ts
src/utils/: github.ts
