[package]
name = "github-community-manager"
version = "0.1.0"
description = "GitHub Community Manager - Windows Desktop App with Rust Backend"
authors = [""]
edition = "2021"

[lib]
name = "github_community_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.40"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
